--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/dasseya1/twitterbot#readme",
   "dependencies": {
+    "dotenv": "^4.0.0",
     "twitter": "^1.7.1"
   }
 }
